Update 1.Q.2 Hard Questions.md

--- a/DOMAIN1: Security and Risk Management/1.Q.2 Hard Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.2 Hard Questions.md
@@ -175,7 +175,7 @@ Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CIS
 
 <details> <summary>Show answer</summary>
 
-  **(B) Risk Owner**
+  **Correct Answer: (B) Risk Owner**
 
 Assigning a Risk Owner is essential to ensure that someone within the organization takes responsibility for managing and mitigating each identified risk, fostering accountability and proactive risk management practices. This individual is tasked with monitoring the risk, implementing appropriate controls, and escalating issues as needed to mitigate potential impacts.
 While threats, audits, and frameworks are relevant components of risk management, they may not always need to be directly documented within the Risk Register, as the primary focus is on identifying and managing specific risks and their associated mitigation strategies. However, these elements can inform risk assessments and help inform decision-making processes regarding risk management strategies. Overall, a comprehensive Risk Register should capture key information about identified risks, their owners, mitigation actions, and ongoing monitoring efforts to ensure effective risk management throughout the organization
@@ -197,7 +197,7 @@ Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CIS
 
 <details> <summary>Show answer</summary>
 
-  **(A) Level of risk reduction**
+  **Correct Answer: (A) Level of risk reduction**
 
 Again 4 correct answers here with 1 answer more correct than others.
 The most correct answer for this question is "Level of risk reduction." While all options are important considerations when selecting a control or countermeasure, prioritizing the level of risk reduction ensures that security measures effectively mitigate potential threats and vulnerabilities. While cost, ease of implementation, and time required for implementation are also relevant factors, they may vary in importance depending on the specific context and objectives of the security enhancement. Ultimately, the primary goal of enhancing security measures for sensitive data storage is to minimize risk exposure and protect the confidentiality, integrity, and availability of the data, making risk reduction the most critical factor to prioritize in decision-making.
@@ -207,3 +207,212 @@ Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CIS
 
 ---
 
+9. **Your company has experienced numerous cyber attacks in recent months. Senior management has tasked you with preparing a report that categorizes all existing threats for the swift implementation of effective countermeasures. Which of the following categorization methods will you employ?**
+
+(A) By threat source
+
+(B) Known vs unknowns
+
+(C) Potential vs actual
+
+(D) Natural vs human-initiated
+
+<details> <summary>Show answer</summary>
+
+  **Correct Answer: (C) Potential vs actual**
+
+Potential vs. actual categorization shifts the focus from the origin of threats to their likelihood of materializing, allowing for a more pragmatic approach to threat management. By prioritizing actual threats over potential ones, organizations can allocate resources more efficiently towards implementing effective countermeasures that address immediate risks. This approach emphasizes proactive risk mitigation strategies based on real-world threats, enhancing the organization's overall security posture.
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#191-threat-and-vulnerability-identification)
+</details>
+
+---
+
+10. **Which of the following is a Threat Modeling Methodology developed by Carnegie Mellon which focuses on operational risk, security controls, and security technologies in an organization ?**
+
+(A) OCTAVE
+
+(B) STRIDE
+
+(C) VAST
+
+(D) PASTA
+
+<details> <summary>Show answer</summary>
+
+  **Correct Answer: (A) OCTAVE**
+
+OCTAVE, which stands for Operationally Critical Threat, Asset, and Vulnerability Evaluation, is a Threat Modeling Methodology developed by Carnegie Mellon University. It focuses on assessing operational risks, security controls, and security technologies within an organization. OCTAVE is designed to help organizations identify and address information security risks comprehensively.
+
+Wrong Answers:
+
+STRIDE is another threat modeling methodology, but it is not developed by Carnegie Mellon. It is a Microsoft-developed framework that focuses on identifying different types of security threats in software systems.
+
+VAST (Visual, Agile, and Simple Threat modeling) : Threat modeling methodology incorporated into the software development life cycle (SDLC) and frequently used in Agile development models
+
+PASTA (Process for Attack Simulation and Threat Analysis) is a threat modeling methodology that focuses on simulating cyberattacks and analyzing threats in application security. However, it is not developed by Carnegie Mellon and does not specifically emphasize operational risk and security controls as OCTAVE does.
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.10%20Understand%20and%20apply%20threat%20modeling%20concepts%20and%20methodologies.md#110-understand-and-apply-threat-modeling-concepts-and-methodologies)
+</details>
+
+---
+
+11. **Your company is incorporating supply chain risk management into its comprehensive risk management program. What should you prioritize first in commencing supply chain risk management?**
+
+(A) Inventorying all hardware, software and services present in the company
+
+(B) Threat modeling
+
+(C) Developing a Business Impact Assessment
+
+(D) Identify all upstream and downstream components within the company's supply chain
+
+<details> <summary>Show answer</summary>
+
+  **Correct Answer: (D) Identify all upstream and downstream components within the company's supply chain**
+
+Prioritizing the identification of all upstream and downstream components within the company's supply chain is a foundational step in understanding the structure and dependencies of the supply chain. This step helps in assessing potential risks and vulnerabilities associated with various elements in the supply chain.
+
+Wrong Answers:
+
+Inventorying all hardware, software, and services present in the company: While inventorying is important, the question specifically addresses the commencement of supply chain risk management. Focusing on the supply chain components directly would be more relevant to start the process.
+
+Threat modeling: Threat modeling is a valuable step, but it might come later in the process after understanding the components and potential risks within the supply chain.
+
+Developing a Business Impact Assessment: A Business Impact Assessment is crucial but is typically conducted after understanding the risks and components within the supply chain. The initial step is to identify and map the components before assessing their potential impact on the business.
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.11%20Apply%20supply%20chain%20risk%20management%20(SCRM)%20concepts.md#1111-risks-associated-with-the-acquisition-of-products-and-services-from-suppliers-and-providers-eg-product-tampering-counterfeits-implants)
+</details>
+
+---
+
+12. **Introducing numerous new services and software into your company has brought about a host of fresh threats and vulnerabilities. To swiftly prepare and train your team for these changes, how would you proceed chronologically?**
+
+(A) Awareness, training, education
+
+(B) Training, awareness, education
+
+(C) Awareness, training, commitment
+
+(D) Training, awareness, skills
+
+<details> <summary>Show answer</summary>
+
+  **Correct Answer: (A) Awareness, training, education**
+
+In a scenario where numerous new services and software are introduced, initiating the process with awareness is crucial. This involves creating an understanding among the team about the changes, potential threats, and the importance of the upcoming training.
+Training follows awareness, allowing the team to acquire specific skills and knowledge relevant to the new services and software. Practical training sessions can be conducted to ensure hands-on experience.
+Education is the final step, providing a deeper understanding of the underlying concepts and principles related to the introduced services and software.
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.12%20Establish%20and%20maintain%20a%20security%20awareness%2C%20education%2C%20and%20training%20program.md#1121-methods-and-techniques-to-increase-awareness-and-training-eg-social-engineering-phishing-security-champions-gamification)
+</details>
+
+---
+
+13. **You have been tasked with conducting an initial assessment for implementing LLM (Large Language Model) in your company. Which of the following risks will you prioritize for analysis?**
+
+(A) Integrity and Accountability
+
+(B) Identification and Confidentiality
+
+(C) Non-repudiation and Authorization
+
+(D) Intellectual property and social engineering
+
+<details> <summary>Show answer</summary>
+
+  **Correct Answer: (D) Intellectual property and social engineering**
+
+When implementing Large Language Models (LLMs) in a company, protecting intellectual property (IP) is a significant concern. These models have the capability to generate text that may inadvertently disclose sensitive company information or proprietary data. Therefore, analyzing the risk associated with potential breaches of intellectual property and the possibility of social engineering attacks becomes paramount.
+Intellectual property concerns involve safeguarding company secrets, proprietary algorithms, trade secrets, and other valuable assets from unauthorized access or disclosure. Social engineering refers to manipulative techniques used by attackers to exploit human psychology and trick individuals into divulging confidential information or granting unauthorized access.
+Prioritizing the analysis of these risks ensures that appropriate measures can be implemented to protect the company's intellectual property and mitigate the risk of social engineering attacks when deploying LLMs within the organization.
+
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.04%20Understand%20legal%2C%20regulatory%2C%20and%20compliance%20issues%20that%20pertain%20to%20information%20security%20in%20a%20holistic%20context.md#142-licensing-and-intellectual-property-requirements)
+</details>
+
+---
+
+14. **Your company has experienced a significant data exfiltration incident. Following an internal investigation, it appears that the root cause was a user jailbreaking a smartphone. How do you plan to address this situation ?**
+
+(A) Inform upper management and ask HR for disciplinary actions
+
+(B) Harden all smartphones to avoid the problem may happen again on other devices
+
+(C) Verify company's policies, implement administrative and technical countermeasures
+
+(D) Ask the user who jailbreaked the phone details of what happened
+
+<details> <summary>Show answer</summary>
+
+  **Correct Answer: (C) Verify company's policies, implement administrative and technical countermeasures**
+
+The correct approach involves reviewing company policies related to device usage and security, implementing administrative and technical measures to prevent similar incidents in the future. This may include reinforcing security protocols, updating policies, and deploying measures to detect and prevent unauthorized device modifications.
+
+Wrong Answers:
+
+Inform upper management and ask HR for disciplinary actions: While it's important to inform upper management about the incident, immediately resorting to disciplinary actions may not address the root cause or prevent future occurrences. It's essential to focus on mitigating the issue through security measures first.
+
+Harden all smartphones to avoid the problem may happen again on other devices: While hardening smartphones is a good practice for enhancing security, solely focusing on this action without investigating the root cause and implementing broader countermeasures may overlook other potential vulnerabilities.
+
+Ask the user who jailbroke the phone details of what happened: While gathering information from the user involved is important, relying solely on their account without conducting a thorough investigation or implementing preventive measures may leave the company vulnerable to similar incidents in the future.
+
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.06%20Develop%2C%20document%2C%20and%20implement%20security%20policy%2C%20standards%2C%20procedures%2C%20and%20guidelines.md#16-develop-document-and-implement-security-policy-standards-procedures-and-guidelines)
+</details>
+
+---
+
+15. **The last two years have seen tremendous growth for a software startup company. Although HR and senior management are making an effort to hire more engineers, client demand is still not being satisfied. The company has chosen to contract with a third-party software development vendor, but not before conducting their due diligence. Which of the following actions with the third-party company should happen first ?**
+
+(A) An audit
+
+(B) A verification of the 3rd company certifications
+
+(C) A risk assessment for the outsourced process
+
+(D) Sharing the Project Management Plan
+
+<details> <summary>Show answer</summary>
+
+  **Correct Answer: (C) A risk assessment for the outsourced process**
+
+Risks to a company extend beyond its boundaries and into the ecosystem of its partnerships with third parties, where visibility is limited. A third-party risk assessment will gauge the following:
+- The effect of a vendor's failure
+- The consequences of missing deadlines
+- The vendor's vulnerability to external environmental risks
+A comprehensive third-party risk assessment must be carried out prior to entering into any kind of contractual relationship, regardless of whether it is the result of a vendor self-evaluation or an ongoing on-site inspection. Risk assessments are a means to gauge the third party's level of assurance for their good or service.
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#19-understand-and-apply-risk-management-concepts)
+</details>
+
+---
+
+16. **Accountability is important in InfoSec to ensure that individuals and entities take responsibility for safeguarding sensitive information and adhere to security protocol. Which of the following is not true regarding accountability ?**
+
+(A) Is applied by default after authentication
+
+(B) It can't be delegated
+
+(C) Is usually achieved through auditing
+
+(D) Is the basis for forensics
+
+<details> <summary>Show answer</summary>
+
+  **Correct Answer: (A) Is applied by default after authentication**
+
+Accountability is not applied automatically by default after authentication. Accountability involves tracking and recording actions, and it is often achieved through explicit mechanisms such as auditing.
+
+Wrong Answers:
+
+It can't be delegated: Accountability is generally associated with the individual or entity responsible for actions. It can't be easily delegated to another party because it involves attributing actions to the specific entity that performed them.
+
+Is usually achieved through auditing: Accountability is often achieved through auditing, which involves monitoring and recording events. Auditing helps create a record of actions taken by users, contributing to accountability.
+
+Is the basis for forensics: Accountability is indeed the basis for digital forensics. When an incident occurs, the accountability information gathered through auditing can be crucial for investigating and understanding what happened.
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.02%20Understand%20and%20apply%20security%20concepts.md#121-confidentiality-integrity-and-availability-authenticity-and-nonrepudiation-5-pillars-of-information-security)
+</details>
+
+---
