Update 1.Q.2 Hard Questions.md

--- a/DOMAIN1: Security and Risk Management/1.Q.2 Hard Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.2 Hard Questions.md
@@ -416,3 +416,32 @@ Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CIS
 </details>
 
 ---
+
+17. **Your company is transitioning several outsourced marketing operations in-house. What is the first action you should take in response to this decision?**
+
+(A) Appoint a Data Protection Officer (DPO).
+
+(B) Conduct a Data Protection Impact Assessment (DPIA).
+
+(C) Enable Multi-Factor Authentication (MFA) on all employee laptops.
+
+(D) Ensure that all company data, whether stored, in use, or in transit, is encrypted.
+
+<details> <summary>Show answer</summary>
+
+  **Correct Answer: (B) Conduct a Data Protection Impact Assessment (DPIA).**
+
+Conduct a Data Protection Impact Assessment (DPIA). A DPIA is essential whenever significant changes are made to data processing, especially in cases where data handling shifts from an external provider to internal management. This assessment will help identify potential risks to personal data and ensure that appropriate safeguards are in place, which is critical for protecting customer and company information as marketing operations transition in-house.
+
+Incorrect Answers:
+
+Ensure that all company data, whether stored, in use, or in transit, is encrypted. While encryption is vital for data security, it is not the first action to take in this situation. Encryption is part of a broader set of security measures, which would typically be considered after a DPIA identifies the specific risks and vulnerabilities associated with bringing operations in-house.
+
+Enable Multi-Factor Authentication (MFA) on all employee laptops. Implementing MFA is an effective security control to protect access to sensitive information, but it is not the immediate priority in response to the decision to internalize marketing operations. A DPIA would help determine which security measures, including MFA, are most appropriate based on identified risks.
+
+Appoint a Data Protection Officer (DPO). Appointing a DPO is only required under some circumstances. This role could be beneficial, but hiring a DPO is not the immediate step needed to address risks associated with internalizing marketing operations.
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.04%20Understand%20legal%2C%20regulatory%2C%20and%20compliance%20issues%20that%20pertain%20to%20information%20security%20in%20a%20holistic%20context.md#145-issues-related-to-privacy-eg-general-data-protection-regulation-gdpr-california-consumer-privacy-act-personal-information-protection-law-protection-of-personal-information-act)
+</details>
+
+---
