Update 1.L.1 Github as a learning tool.md

--- a/DOMAIN1: Security and Risk Management/1.L.1 Github as a learning tool.md
+++ b/DOMAIN1: Security and Risk Management/1.L.1 Github as a learning tool.md
@@ -1,3 +1,5 @@
+## Github as a learning tool ##
+
 GitHub isn't just a tool for software developers—it's a powerful platform for organizing, preserving, and versioning any kind of text-based content, especially Markdown. Thanks to its built-in version control system, it ensures the integrity of your data by keeping a complete history of every change. In the following section, we'll explore the basics of GitHub through a practical example, showing how you can use it as a personal learning platform to manage and track your technical knowledge over time.
 
 ## Features GitHub Gives You ##
