Update 1.12 Establish and maintain a security awareness, education, and training program.md

--- a/DOMAIN1: Security and Risk Management/1.12 Establish and maintain a security awareness, education, and training program.md
+++ b/DOMAIN1: Security and Risk Management/1.12 Establish and maintain a security awareness, education, and training program.md
@@ -1,3 +1,5 @@
+## 1.12 Establish and maintain a security awarness, education amd training program ##
+
 ## 1.12.1 Methods and techniques to increase awareness and training (e.g., social engineering, phishing, security champions, gamification) ##
 
 Before initiating actual training sessions, it is imperative to establish security awareness among users. Once this foundational step is accomplished, training sessions can commence, focusing on instructing employees in their job tasks and ensuring compliance with security policies. All new hires necessitate some level of training to adhere to standards, guidelines, and procedures mandated by security policies. Education, on the other hand, involves a more comprehensive learning process, often associated with individuals pursuing certification or seeking career advancement. Employees should be equipped with knowledge about various threats such as phishing and the importance of secure practices in their roles, encompassing aspects like data encryption and physical asset protection. 
