Update 1.D.2 Wait, That’s Protected?!"— Understanding Patents, Copyrights, and Trademarks (Without Falling Asleep).md

--- a/DOMAIN1: Security and Risk Management/1.D.2 Wait, That’s Protected?!"— Understanding Patents, Copyrights, and Trademarks (Without Falling Asleep).md
+++ b/DOMAIN1: Security and Risk Management/1.D.2 Wait, That’s Protected?!"— Understanding Patents, Copyrights, and Trademarks (Without Falling Asleep).md
@@ -1,4 +1,4 @@
-## 1.D.2 Wait, That’s Protected?!"— Understanding Patents, Copyrights, and Trademarks (Without Falling Asleep) ##
+## 1.D.2 "Wait, That’s Protected?!"— Understanding Patents, Copyrights, and Trademarks (Without Falling Asleep) ##
 
 Imagine this: You're in your garage inventing the next big thing—maybe it's a self-cleaning coffee mug, maybe it's a drone that brings you socks. Whatever it is, it’s brilliant. You tell your friend about it, and suddenly it ends up on Kickstarter under their name. Or maybe you write a killer novel called "Harry Trotter and the Bucket of Magic", and then some lawyer in a fancy suit sends you a cease-and-desist. Or maybe, just maybe, you open a burger joint and call it "McRonald’s"—and then get sued faster than you can say "Happy Meal". Welcome to the world of intellectual property, where patents, copyrights, and trademarks are the legal superheroes (or supervillains, depending on your side of the lawsuit). Let’s dive into each of these.
 
