Update 1.D.3 Acceptable Use Policy (AUP).md

--- a/DOMAIN1: Security and Risk Management/1.D.3 Acceptable Use Policy (AUP).md
+++ b/DOMAIN1: Security and Risk Management/1.D.3 Acceptable Use Policy (AUP).md
@@ -1,4 +1,4 @@
-*Commented* **Acceptable Use Policy (AUP)** 
+## *Commented* Acceptable Use Policy (AUP) ## 
 
 Version: 1.0 | Effective Date: [ _______ ]
 
